--- a/src/main/resources/assets/sodium/lang/ko_kr.json
+++ b/src/main/resources/assets/sodium/lang/ko_kr.json
@@ -2,66 +2,66 @@
   "sodium.option_impact.low": "낮음",
   "sodium.option_impact.medium": "중간",
   "sodium.option_impact.high": "높음",
-  "sodium.option_impact.extreme": "극한",
-  "sodium.option_impact.varies": "변동",
+  "sodium.option_impact.extreme": "매우 높음",
+  "sodium.option_impact.varies": "때에 따라 다름",
   "sodium.options.pages.quality": "품질",
   "sodium.options.pages.performance": "성능",
   "sodium.options.pages.advanced": "고급",
-  "sodium.options.view_distance.tooltip": "렌더 거리는 얼마나 멀리까지 지형을 렌더링할지 조절합니다. 거리가 짧을수록 렌더링되는 지형이 적어져 프레임 속도가 향상됩니다.",
-  "sodium.options.simulation_distance.tooltip": "시뮬레이션 거리는 얼마나 멀리까지 지형과 개체를 로드하고 갱신할지를 조절합니다. 거리가 짧을수록 내부 서버의 부하가 줄어들어 프레임 속도가 향상될 수 있습니다.",
+  "sodium.options.view_distance.tooltip": "렌더 거리는 얼마나 멀리 있는 지형을 렌더링할지 제어합니다. 거리가 짧을수록 적은 지형이 렌더링 되어, 프레임 속도가 개선됩니다.",
+  "sodium.options.simulation_distance.tooltip": "시뮬레이션 거리는 얼마나 멀리 있는 지형과 엔티티를 업데이트할지 조절합니다. 거리가 짧을수록 시스템의 부하가 줄어들고 프레임 속도가 개선됩니다.",
   "sodium.options.brightness.tooltip": "게임의 밝기(감마)를 조절합니다.",
-  "sodium.options.gui_scale.tooltip": "사용자 인터페이스에 사용할 최대 비율을 설정합니다. '자동'으로 설정되면 가장 큰 비율이 항상 사용됩니다.",
-  "sodium.options.fullscreen.tooltip": "활성화되면 게임이 전체 화면 모드로 표시됩니다(지원되는 경우).",
-  "sodium.options.v_sync.tooltip": "활성화되면 게임의 프레임 속도가 모니터의 재생률에 동기화되어 일반적으로 부드러운 경험을 제공하지만, 전체 입력 지연이 늘어납니다. 이 설정은 시스템이 느린 경우 성능을 저하시킬 수 있습니다.",
-  "sodium.options.fps_limit.tooltip": "초당 프레임 수를 제한합니다. 이는 배터리 사용량과 멀티태스킹 시 시스템 부하를 줄이는 데 도움이 될 수 있습니다. VSync가 활성화된 경우 이 옵션은 디스플레이의 재생률보다 낮지 않는 한 무시됩니다.",
-  "sodium.options.view_bobbing.tooltip": "활성화되면 플레이어가 움직일 때 시야가 흔들리고 빗나갑니다. 게임 중 멀미를 겪는 플레이어는 이 옵션을 비활성화하면 도움이 됩니다.",
-  "sodium.options.attack_indicator.tooltip": "화면에 공격 지표가 표시될 위치를 조절합니다.",
-  "sodium.options.autosave_indicator.tooltip": "활성화되면 게임이 세계를 디스크에 저장할 때 표시됩니다.",
-  "sodium.options.graphics_quality.tooltip": "기본 그래픽 품질은 일부 레거시 옵션을 제어하며 모드 호환성을 위해 필요합니다. 아래 옵션이 '기본'으로 설정된 경우, 이 설정을 사용합니다.",
-  "sodium.options.clouds_quality.tooltip": "하늘에 렌더링된 구름의 품질을 제어합니다. '빠르게'와 '화려하게'로 레이블이 붙어 있지만 성능에 미치는 영향은 미미합니다.",
-  "sodium.options.weather_quality.tooltip": "비와 눈 같은 날씨 효과가 렌더링되는 거리를 제어합니다.",
+  "sodium.options.gui_scale.tooltip": "사용자 인터페이스의 최대 크기를 설정합니다. \"자동\"으로 설정하면, 가능한 가장 큰 크기가 적용됩니다.",
+  "sodium.options.fullscreen.tooltip": "활성화하면, 가능한 경우 게임이 전체 화면으로 표시됩니다.",
+  "sodium.options.v_sync.tooltip": "활성화하면, 게임의 프레임 속도가 모니터의 주사율과 동기화 되어, 필요없는 입력 지연을 줄여 전반적으로 부드러운 경험을 제공합니다. 다만, 시스템이 너무 느리거나 수직 동기화를 지원하지 않는 경우 성능이 오히려 감소할 수 있습니다.",
+  "sodium.options.fps_limit.tooltip": "초당 프레임의 최대값을 설정합니다. 이렇게 하면 배터리 사용량을 줄이고 멀티 태스킹중에 시스템 사용량을 줄일 수 있습니다. 수직 동기화가 활성화 되어 있는 상태에서 해당 설정을 수직 동기화보다 높게 설정하면 수직 동기화가 우선 적용됩니다.",
+  "sodium.options.view_bobbing.tooltip": "활성화 하면, 주변을 움직일 때 시야가 흔들립니다. 플레이 도중 멀미를 경험한 플레이어는 해당 옵션을 비활성화 하여 더 나은 게임 플레이를 할 수 있습니다.",
+  "sodium.options.attack_indicator.tooltip": "화면에 표시할 공격 표시기의 위치를 설정합니다.",
+  "sodium.options.autosave_indicator.tooltip": "활성화하면, 월드를 저장할 때 화면에 작게 안내가 표시됩니다.",
+  "sodium.options.graphics_quality.tooltip": "일부 레거시 옵션을 제어하는 기본 그래픽 품질로, 모드 호환성에 유용합니다. 나뉘어진 그래픽 설정이 \"기본\"으로 설정되어 있으면 이 설정이 적용됩니다.",
+  "sodium.options.clouds_quality.tooltip": "구름의 품질을 설정합니다. 실제 성능에는 큰 영향을 미치지 않습니다.",
+  "sodium.options.weather_quality.tooltip": "눈과 비 등 날씨 효과가 렌더링되는 거리를 조절합니다.",
   "sodium.options.leaves_quality.name": "나뭇잎",
-  "sodium.options.leaves_quality.tooltip": "나뭇잎을 투명(화려하게) 또는 불투명(빠르게)으로 렌더링할지 제어합니다.",
-  "sodium.options.particle_quality.tooltip": "화면에 한 번에 나타날 수 있는 입자의 최대 수를 제어합니다.",
-  "sodium.options.smooth_lighting.tooltip": "세계의 블록을 부드럽게 조명하고 음영 처리합니다. 이는 청크를 로드하거나 업데이트하는 데 걸리는 시간을 아주 약간 늘릴 수 있지만 프레임 속도에는 영향을 미치지 않습니다.",
+  "sodium.options.leaves_quality.tooltip": "나뭇잎을 투명하게 (화려하게) 또는 불투명하게 (빠르게) 렌더링 할지 설정합니다.",
+  "sodium.options.particle_quality.tooltip": "한번에 화면에 표시 가능한 최대 입자의 개수를 조절합니다.",
+  "sodium.options.smooth_lighting.tooltip": "빛을 부드럽게 다듬고 블록의 음영을 렌더링 할지 설정합니다. 활성화 하면 청크를 로드하고 업데이트 하는 데 약간 더 오래 걸릴 수 있지만, FPS에는 영항을 주지 않습니다.",
   "sodium.options.biome_blend.value": "%s 블록",
-  "sodium.options.biome_blend.tooltip": "생물 군계 색상이 부드럽게 블렌딩되는 거리를 블록 단위로 설정합니다. 더 높은 값을 사용할수록 청크 로드 및 업데이트 시간이 크게 증가하지만 품질 개선은 점진적입니다.",
-  "sodium.options.entity_distance.tooltip": "개체 렌더링에 사용되는 렌더 거리 비율을 설정합니다. 더 작은 값은 감소하고 더 큰 값은 개체가 렌더링되는 최대 거리를 증가시킵니다.",
-  "sodium.options.entity_shadows.tooltip": "활성화되면 몹 및 기타 개체 아래에 기본 그림자가 렌더링됩니다.",
-  "sodium.options.vignette.name": "비네트",
-  "sodium.options.vignette.tooltip": "활성화되면 플레이어가 어두운 지역에 있을 때 비네트 효과가 적용되어 전체 이미지를 어둡고 극적으로 만듭니다.",
-  "sodium.options.mipmap_levels.tooltip": "블록 모델 텍스처에 사용할 미리보기 맵의 수를 제어합니다. 높은 값은 거리에서 블록 렌더링을 개선하지만, 많은 애니메이션 텍스처를 사용하는 리소스 팩의 경우 성능에 악영향을 미칠 수 있습니다.",
-  "sodium.options.use_block_face_culling.name": "블록 면 제거 사용",
-  "sodium.options.use_block_face_culling.tooltip": "활성화되면 카메라를 향하고 있는 블록 면만 렌더링됩니다. 이는 렌더링 과정 초기에 많은 블록 면을 제거하여 렌더링 성능을 크게 향상시킬 수 있습니다. 일부 리소스 팩에서 문제가 발생할 수 있으므로 블록에 구멍이 생기는 경우 이 옵션을 비활성화해 보십시오.",
-  "sodium.options.use_fog_occlusion.name": "안개 차단 사용",
-  "sodium.options.use_fog_occlusion.tooltip": "활성화되면 안개 효과에 의해 완전히 가려진 것으로 판단되는 청크가 렌더링되지 않아 성능이 향상됩니다. 개선은 안개 효과가 더 심한 경우(예: 물속에 있을 때) 더 극적일 수 있지만, 일부 시나리오에서 하늘과 안개 사이의 시각적 결함을 일으킬 수 있습니다.",
-  "sodium.options.use_entity_culling.name": "개체 제거 사용",
-  "sodium.options.use_entity_culling.tooltip": "활성화되면 카메라 뷰포트 내에 있지만 보이는 청크 내에 있지 않은 개체는 렌더링되지 않습니다. 이 최적화는 청크 렌더링에 이미 존재하는 가시성 데이터를 사용하므로 추가 오버헤드가 발생하지 않습니다.",
-  "sodium.options.animate_only_visible_textures.name": "보이는 텍스처만 애니메이션",
-  "sodium.options.animate_only_visible_textures.tooltip": "활성화되면 현재 이미지에서 보이는 것으로 판단되는 애니메이션 텍스처만 업데이트됩니다. 이는 특히 무거운 리소스 팩과 함께 사용할 때 프레임 속도를 크게 향상시킬 수 있습니다. 일부 텍스처가 애니메이션되지 않는 문제가 발생하면 이 옵션을 비활성화해 보십시오.",
-  "sodium.options.cpu_render_ahead_limit.name": "CPU 렌더-어헤드 제한",
-  "sodium.options.cpu_render_ahead_limit.tooltip": "디버깅 전용. GPU로 전송될 수 있는 최대 프레임 수를 지정합니다. 이 값을 변경하는 것은 권장되지 않으며, 너무 낮거나 높은 값은 프레임 속도 불안정을 초래할 수 있습니다.",
+  "sodium.options.biome_blend.tooltip": "생물 군계의 색을 다듬을 크기를 조절합니다. 값이 클수록 청크를 로드하고 업데이트하는데 더 오래 걸릴 수 있지만, 더 나은 품질을 경험할 수 있습니다.",
+  "sodium.options.entity_distance.tooltip": "렌더 거리에서 엔티티를 얼마나 렌더링할지 조절합니다.",
+  "sodium.options.entity_shadows.tooltip": "활성화하면, 엔티티 아래에 그림자를 렌더링 합니다.",
+  "sodium.options.vignette.name": "비네팅",
+  "sodium.options.vignette.tooltip": "활성화 하면, 어두운 곳에서 화면이 어두워지고 더 드라마틱하게 표현되는 비네팅 효과가 적용됩니다.",
+  "sodium.options.mipmap_levels.tooltip": "블록 모델 텍스쳐에 사용할 밉맵의 개수를 조절합니다. 값이 클수록 먼 거리의 블록 렌더링이 개선되지만, 많은 애니메이션 텍스쳐를 포함한 리소스팩을 사용중인 경우 성능에 큰 영향을 줄 수 있습니다.",
+  "sodium.options.use_block_face_culling.name": "블록 면 컬링 사용",
+  "sodium.options.use_block_face_culling.tooltip": "활성화 하면, 시야에 보이는 블록의 면만 렌더링 됩니다. 이렇게 하면 초기 렌더링 과정에서 렌더링 해야할 블록 면의 수가 크게 감소하게 되어, 렌더링 속도가 크게 개선됩니다. 다만 일부 리소스팩은 해당 옵션과 충돌할 수 있으므로, 블록에서 구멍이 보이는 경우 비활성화 해보는것을 권장합니다.",
+  "sodium.options.use_fog_occlusion.name": "안개 오클루전 사용",
+  "sodium.options.use_fog_occlusion.tooltip": "활성화하면, 안개 효과로 인해 완전히 가려진 청크는 렌더링 되지 않아, 성능을 개선하는 데 도움을 줄 수 있습니다. 안개 효과가 클수록(수중 등) 더 개선되지만, 때때로 하늘과 안개 사이에 그래픽 깨짐이 발생할 수 있습니다.",
+  "sodium.options.use_entity_culling.name": "엔티티 컬링 사용",
+  "sodium.options.use_entity_culling.tooltip": "활성화 하면, 보이지 않는 청크에 있는 엔티티가 렌더링에서 제외됩니다.",
+  "sodium.options.animate_only_visible_textures.name": "보이는 애니메이션 텍스쳐만 업데이트",
+  "sodium.options.animate_only_visible_textures.tooltip": "활성화 하면, 시야에 보여지는 애니메이션 텍스쳐만 업데이트 됩니다. 이렇게 하면 무거운 리소스팩을 사용하지 않는 한 일부 하드웨어에서 성능이 크게 개선될 수 있습니다. 다만, 일부 리소스팩과 충돌할 수 있으므로, 일부 텍스쳐에 애니메이션이 적용되지 않는다면 이 설정을 비활성화 해볼 것을 권장합니다.",
+  "sodium.options.cpu_render_ahead_limit.name": "CPU 미리 렌더링 제한",
+  "sodium.options.cpu_render_ahead_limit.tooltip": "개발자들이 테스트 동안 사용할 목적으로 만든 설정으로, GPU에 전달되는 최대 프레임 수를 조절합니다. 값이 적당하지 않으면 프레임 속도가 굉장히 불안정해질 수 있으므로, 이 설정을 수정하는 것은 굉장히 권장되지 않으며, 또한 지원받을 수 없습니다!",
   "sodium.options.cpu_render_ahead_limit.value": "%s 프레임",
   "sodium.options.performance_impact_string": "성능 영향: %s",
-  "sodium.options.use_persistent_mapping.name": "지속적인 매핑 사용",
-  "sodium.options.use_persistent_mapping.tooltip": "디버깅 전용. 활성화되면 불필요한 메모리 복사를 피하기 위해 스테이징 버퍼에 지속적인 메모리 매핑이 사용됩니다. 비활성화하면 그래픽 손상의 원인을 좁히는 데 유용할 수 있습니다.\n\nOpenGL 4.4 또는 ARB_buffer_storage가 필요합니다.",
+  "sodium.options.use_persistent_mapping.name": "영구 매핑 사용",
+  "sodium.options.use_persistent_mapping.tooltip": "테스트 동안 사용할 목적으로 만든 설정이며, 활성화 하면, 테이지 버퍼에 영구 메모리 매핑을 사용합니다. 이렇게 하면, 불필요한 메모리 복사를 방지할 수 있으며, 비활성화 하면 렌더링 오류의 원인을 좁히는 데 유용할 수 있습니다.\n\nOpenGL 4.4 이상이거나 GPU가 \"ARB_buffer_storage\"를 지원해야 합니다.",
   "sodium.options.chunk_update_threads.name": "청크 업데이트 스레드",
-  "sodium.options.chunk_update_threads.tooltip": "청크 빌드 및 정렬에 사용할 스레드 수를 지정합니다. 더 많은 스레드를 사용하면 청크 로드 및 업데이트 속도가 빨라질 수 있지만, 프레임 타임에 부정적인 영향을 미칠 수 있습니다. 기본 값은 대부분의 상황에 충분합니다.",
+  "sodium.options.chunk_update_threads.tooltip": "고급 사용자용 설정으로, 청크 빌드에 사용될 스레드의 개수를 조절합니다. 값이 높을수록 청크를 로드하고 업데이트 하는 속도를 빠르게 할 수 있지만, 프레임 속도에 크게 악영향을 미칠 수 있습니다. 따라서 변경하는것은 권장되지 않으며, 또한 지원되지 않습니다! 기본값은 대부분의 상황에서 최적의 결과를 낼 수 있도록 조절되어 있습니다.",
   "sodium.options.always_defer_chunk_updates.name": "항상 청크 업데이트 지연",
-  "sodium.options.always_defer_chunk_updates.tooltip": "활성화되면 렌더링은 청크 업데이트가 완료될 때까지 기다리지 않습니다. 이는 일부 시나리오에서 프레임 속도를 크게 향상시킬 수 있지만, 블록이 나타나거나 사라지는 데 시간이 걸리는 등 시각적 지연을 일으킬 수 있습니다.",
-  "sodium.options.sort_behavior.name": "반투명 정렬",
+  "sodium.options.always_defer_chunk_updates.tooltip": "고급 사용자용 설정으로, 활성화 하면, 청크 업데이트가 아무리 중요하더라도, 청크 업데이트가 끝나기 까지 기다리지 않고 바로 렌더링 합니다. 이렇게 하면 아주 특정한 상황에서 프레임 속도가 굉장히 크게 개선될 수 있지만, 블록이 보여졌다 사라지기를 반복하는 굉장히 신경쓰이는 렉을 유발할 수 있습니다. 따라서 변경하는 것은 권장되지 않으며, 또한 지원되지 않습니다!",
+    "sodium.options.sort_behavior.name": "반투명 정렬",
   "sodium.options.sort_behavior.tooltip": "반투명 정렬을 활성화합니다. 이는 물 및 유리와 같은 반투명 블록의 글리치를 방지하고, 카메라가 움직이는 동안에도 올바르게 표시하려고 합니다. 이는 청크 로딩 및 업데이트 속도에 작은 성능 영향을 미치지만, 일반적으로 프레임 속도에서는 눈에 띄지 않습니다.",
-  "sodium.options.use_no_error_context.name": "오류 컨텍스트 사용 안 함",
-  "sodium.options.use_no_error_context.tooltip": "활성화되면 OpenGL 컨텍스트가 오류 검사 없이 생성됩니다. 이는 렌더링 성능을 약간 향상시키지만, 갑작스러운 설명할 수 없는 충돌을 디버깅하는 데 어려움을 겪을 수 있습니다.",
+  "sodium.options.use_no_error_context.name": "컨텍스트 생성 중 오류 확인 비활성화",
+  "sodium.options.use_no_error_context.tooltip": "활성화 하면, 오류를 검사하지 않고 OpenGL 컨텍스트가 생성됩니다. 이렇게 하면 렌더링 성능을 약간 개선할 수 있지만, 갑작스럽게 알 수 없는 충돌이 발생했을 때 문제를 해결하기 더 어려워집니다. 이 설정을 활성화 하면 지원받지 못할 수 있습니다.",
   "sodium.options.buttons.undo": "되돌리기",
   "sodium.options.buttons.apply": "적용",
-  "sodium.options.buttons.donate": "커피 한 잔 사 주세요!",
-  "sodium.console.game_restart": "하나 이상의 비디오 설정을 적용하려면 게임을 다시 시작해야 합니다!",
-  "sodium.console.broken_nvidia_driver": "NVIDIA 그래픽 드라이버가 오래되었습니다!\n  * Sodium이 설치된 경우 심각한 성능 문제와 충돌이 발생할 수 있습니다.\n  * 그래픽 드라이버를 최신 버전(버전 536.23 이상)으로 업데이트하십시오.",
-  "sodium.console.pojav_launcher": "PojavLauncher는 Sodium 사용 시 지원되지 않습니다.\n  * 극심한 성능 문제, 그래픽 버그 및 충돌이 발생할 가능성이 높습니다.\n  * 계속 진행하기로 결정하면 혼자 해결해야 하며, 버그나 충돌에 대해 도움을 드리지 않습니다!",
-  "sodium.console.core_shaders_error": "다음 리소스 팩은 Sodium과 호환되지 않습니다:",
-  "sodium.console.core_shaders_warn": "다음 리소스 팩은 Sodium과 호환되지 않을 수 있습니다:",
-  "sodium.console.core_shaders_info": "자세한 정보는 게임 로그를 확인하십시오.",
-  "sodium.console.config_not_loaded": "Sodium의 구성 파일이 손상되었거나 현재 읽을 수 없습니다. 일부 옵션이 임시로 기본값으로 재설정되었습니다. 이 문제를 해결하려면 비디오 설정 화면을 여십시오.",
-  "sodium.console.config_file_was_reset": "구성 파일이 알려진 기본값으로 재설정되었습니다."
+  "sodium.options.buttons.donate": "저희한테 커피 한 잔 사 주세요!",
+  "sodium.console.game_restart": "새로운 설정을 적용하려면 게임을 다시 시작해야 합니다.",
+  "sodium.console.broken_nvidia_driver": "그래픽 드라이버가 최신이 아닙니다!\n  * Sodium이 설치되어 있을 때 심각한 성능 문제와 충돌이 발생할 수 있습니다.\n  * 그래픽 드라이버를 버전 536.23 이상으로 업데이트 하십시오.",
+  "sodium.console.pojav_launcher": "Sodium은 PojavLauncher를 지원하지 않습니다.\n  * 심한 성능 문제, 그래픽 오류 그리고 충돌이 발생할 가능성이 아주 높습니다.\n  * 무시하고 계속할 수 있지만, 이후 발생하는 모든 문제는 본인 책임이며, 지원받을 수 없습니다!",
+  "sodium.console.core_shaders_error": "다음의 리소스팩은 Sodium과 충돌합니다:",
+  "sodium.console.core_shaders_warn": "다음의 리소스팩은 Sodium과 충돌할 수 있습니다:",
+  "sodium.console.core_shaders_info": "자세한 정보를 확인하려면 게임 로그를 확인하십시오.",
+  "sodium.console.config_not_loaded": "Sodium의 구성 파일이 손상되었습니다. 임시적으로 일부 설정값을 기본값으로 초기화 했습니다. 비디오 설정에서 이 문제를 해결하여 주십시오.",
+  "sodium.console.config_file_was_reset": "구성을 알려진 좋은 기본값으로 초기화 했습니다."
 }
