--- a/src/main/resources/assets/sodium/lang/ko_kr.json
+++ b/src/main/resources/assets/sodium/lang/ko_kr.json
@@ -8,7 +8,7 @@
   "sodium.options.pages.performance": "성능",
   "sodium.options.pages.advanced": "고급",
   "sodium.options.view_distance.tooltip": "렌더 거리는 얼마나 멀리 있는 지형을 렌더링할지 제어합니다. 거리가 짧을수록 적은 지형이 렌더링 되어, 프레임 속도가 개선됩니다.",
-  "sodium.options.simulation_distance.tooltip": "시뮬레이션 거리는 얼마나 멀리 있는 지형과 엔티티를 업데이트할지 조절합니다. 거리가 짧을수록 시스템의 부하가 줄어들고 프레임 속도가 개선됩니다.",
+  "sodium.options.simulation_distance.tooltip": "시뮬레이션 거리는 얼마나 멀리 있는 지형과 개체를 업데이트할지 조절합니다. 거리가 짧을수록 시스템의 부하가 줄어들고 프레임 속도가 개선됩니다.",
   "sodium.options.brightness.tooltip": "게임의 밝기(감마)를 조절합니다.",
   "sodium.options.gui_scale.tooltip": "사용자 인터페이스의 최대 크기를 설정합니다. \"자동\"으로 설정하면, 가능한 가장 큰 크기가 적용됩니다.",
   "sodium.options.fullscreen.tooltip": "활성화하면, 가능한 경우 게임이 전체 화면으로 표시됩니다.",
@@ -26,8 +26,8 @@
   "sodium.options.smooth_lighting.tooltip": "빛을 부드럽게 다듬고 블록의 음영을 렌더링 할지 설정합니다. 활성화 하면 청크를 로드하고 업데이트 하는 데 약간 더 오래 걸릴 수 있지만, FPS에는 영항을 주지 않습니다.",
   "sodium.options.biome_blend.value": "%s 블록",
   "sodium.options.biome_blend.tooltip": "생물 군계의 색을 다듬을 크기를 조절합니다. 값이 클수록 청크를 로드하고 업데이트하는데 더 오래 걸릴 수 있지만, 더 나은 품질을 경험할 수 있습니다.",
-  "sodium.options.entity_distance.tooltip": "렌더 거리에서 엔티티를 얼마나 렌더링할지 조절합니다.",
-  "sodium.options.entity_shadows.tooltip": "활성화하면, 엔티티 아래에 그림자를 렌더링 합니다.",
+  "sodium.options.entity_distance.tooltip": "렌더 거리에서 개체를 얼마나 렌더링할지 조절합니다.",
+  "sodium.options.entity_shadows.tooltip": "활성화하면, 개체 아래에 그림자를 렌더링 합니다.",
   "sodium.options.vignette.name": "비네팅",
   "sodium.options.vignette.tooltip": "활성화 하면, 어두운 곳에서 화면이 어두워지고 더 드라마틱하게 표현되는 비네팅 효과가 적용됩니다.",
   "sodium.options.mipmap_levels.tooltip": "블록 모델 텍스쳐에 사용할 밉맵의 개수를 조절합니다. 값이 클수록 먼 거리의 블록 렌더링이 개선되지만, 많은 애니메이션 텍스쳐를 포함한 리소스팩을 사용중인 경우 성능에 큰 영향을 줄 수 있습니다.",
@@ -35,8 +35,8 @@
   "sodium.options.use_block_face_culling.tooltip": "활성화 하면, 시야에 보이는 블록의 면만 렌더링 됩니다. 이렇게 하면 초기 렌더링 과정에서 렌더링 해야할 블록 면의 수가 크게 감소하게 되어, 렌더링 속도가 크게 개선됩니다. 다만 일부 리소스팩은 해당 옵션과 충돌할 수 있으므로, 블록에서 구멍이 보이는 경우 비활성화 해보는것을 권장합니다.",
   "sodium.options.use_fog_occlusion.name": "안개 오클루전 사용",
   "sodium.options.use_fog_occlusion.tooltip": "활성화하면, 안개 효과로 인해 완전히 가려진 청크는 렌더링 되지 않아, 성능을 개선하는 데 도움을 줄 수 있습니다. 안개 효과가 클수록(수중 등) 더 개선되지만, 때때로 하늘과 안개 사이에 그래픽 깨짐이 발생할 수 있습니다.",
-  "sodium.options.use_entity_culling.name": "엔티티 컬링 사용",
-  "sodium.options.use_entity_culling.tooltip": "활성화 하면, 보이지 않는 청크에 있는 엔티티가 렌더링에서 제외됩니다.",
+  "sodium.options.use_entity_culling.name": "개체 컬링 사용",
+  "sodium.options.use_entity_culling.tooltip": "활성화 하면, 보이지 않는 청크에 있는 개체가 렌더링에서 제외됩니다.",
   "sodium.options.animate_only_visible_textures.name": "보이는 애니메이션 텍스쳐만 업데이트",
   "sodium.options.animate_only_visible_textures.tooltip": "활성화 하면, 시야에 보여지는 애니메이션 텍스쳐만 업데이트 됩니다. 이렇게 하면 무거운 리소스팩을 사용하지 않는 한 일부 하드웨어에서 성능이 크게 개선될 수 있습니다. 다만, 일부 리소스팩과 충돌할 수 있으므로, 일부 텍스쳐에 애니메이션이 적용되지 않는다면 이 설정을 비활성화 해볼 것을 권장합니다.",
   "sodium.options.cpu_render_ahead_limit.name": "CPU 미리 렌더링 제한",
