--- a/common/src/main/resources/assets/sodium/lang/ja_jp.json
+++ b/common/src/main/resources/assets/sodium/lang/ja_jp.json
@@ -2,7 +2,7 @@
   "sodium.option_impact.low": "低",
   "sodium.option_impact.medium": "中",
   "sodium.option_impact.high": "高",
-  "sodium.option_impact.extreme": "極高",
+  "sodium.option_impact.extreme": "超高",
   "sodium.option_impact.varies": "変動",
   "sodium.options.pages.quality": "品質",
   "sodium.options.pages.performance": "パフォーマンス",
